--- a/ui/src/glmap.css
+++ b/ui/src/glmap.css
@@ -1,4 +1,4 @@
-.mapboxgl-map{
+/* .mapboxgl-map{
     width:600px;
     height:350px;
     border: solid;
@@ -6,4 +6,4 @@
     border-color: darkgray;
     border-width: medium;
     float:left;
-  }
+  } */
