changing tempevo for a MDS plot of the distance between the hierarchies (not entirely working, plotwise)
Fixing datastore and geometry/hieararchy access (writing still done outside of that)

--- a/ui/src/tempEvo.css
+++ b/ui/src/tempEvo.css
@@ -1,9 +1,10 @@
-.mapboxgl-map{
-    width:1400px;
+.TempEvo {
+    width:400px;
     height:900px;
+    position: relative;
     border: solid;
-    margin: 1px;
     border-color: darkgray;
     border-width: medium;
+    margin: 1px;
     float:left;
-  }
+}
