Done remaking the base (no country, just geometries) Basic navigation on the aspects

--- a/ui/src/tempEvo.css
+++ b/ui/src/tempEvo.css
@@ -8,3 +8,12 @@
     margin: 1px;
     float:left;
 }
+
+.tooltip {
+    position: absolute;
+    width: fit-content;
+    height: fit-content;
+    background-color: white;
+    border: solid;
+    border-width: thin;
+}
