--- a/ui/src/glmap.css
+++ b/ui/src/glmap.css
@@ -7,3 +7,11 @@
     border-width: medium;
     float:left;
   }
+  .geom-control {
+    border: solid;
+    border-width: thin;
+    background: #FFF;
+    padding: 8px;
+    border-radius: 4px;
+    margin: 8px;
+  }
