--- a/ui/src/glmap.css
+++ b/ui/src/glmap.css
@@ -1,6 +1,6 @@
 .mapboxgl-map{
-    width:1400px;
-    height:900px;
+    width:100%;
+    height:600px;
     border: solid;
     margin: 1px;
     border-color: darkgray;
